# quadrotor_motion_with_mpc_control

package/: CMakeLists.txt  README.md  package.xml  quadrotor_motion_with_mpc_control.xml
package/launch/: quadrotor_motion_with_mpc_control.launch
package/src/include/: behavior_follow_path.h  behavior_follow_path_with_mpc_control.h  behavior_hover_with_mpc_control.h  behavior_quadrotor_mpc_motion_control.h  behavior_rotate_with_mpc_control.h
package/src/source/: behavior_follow_path.cpp  behavior_follow_path_with_mpc_control.cpp  behavior_hover_with_mpc_control.cpp  behavior_quadrotor_mpc_motion_control.cpp  behavior_rotate_with_mpc_control.cpp
subpackages/quadrotor_mpc_controller/: README.md
subpackages/quadrotor_mpc_controller/mav_control_interface/: package.xml
subpackages/quadrotor_mpc_controller/mav_control_interface/include/mav_control_interface/: mpc_queue.h
subpackages/quadrotor_mpc_controller/mav_control_interface/src/: mav_control_interface_impl.cpp  mav_control_interface_impl.h  mpc_queue.cpp  state_machine.cpp  state_machine.h
subpackages/quadrotor_mpc_controller/mav_linear_mpc/: package.xml
subpackages/quadrotor_mpc_controller/mav_linear_mpc/launch/: mav_linear_mpc_sim.launch
subpackages/quadrotor_mpc_controller/mav_linear_mpc/src/: linear_mpc.cpp
